--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,8 @@
 
 {% block content%}
 
+{% include 'navbar.html' %}
+
 <body class="text-gray-700 bg-white" style="font-family: 'Source Sans Pro', sans-serif">
     <!--Hero-->
     <div class="py-20" style="background: linear-gradient(90deg, #667eea 0%, #764ba2 100%)">
@@ -128,5 +130,7 @@
     </section>
 
 </body>
+
+{% include 'footer.html' %}
 
 {% endblock content %}
