--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,10 +16,13 @@
 
         <!-- primary nav -->
         <div class="hidden md:flex items-center space-x-1">
-          <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Features</a>
+        {% if user.is_authenticated %}
+          <a href="{{ user.get_absolute_url }}" class="py-5 px-3 text-gray-700 hover:text-gray-900">Dashboard</a>
+        {% else %}
           <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
           <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
           <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
+        {% endif %}
         </div>
       </div>
 
@@ -47,9 +50,13 @@
 
   <!-- mobile menu -->
   <div class="mobile-menu hidden md:hidden">
-    <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Features</a>
+  {% if user.is_authenticated %}
+    <a href="{% url 'users:logout' %}" class="block py-2 px-4 text-sm hover:bg-gray-200">Logout</a>
+    <a href="{{ user.get_absolute_url }}" class="block py-2 px-4 text-sm hover:bg-gray-200">Dashboard</a>
+  {% else %}
+    <a href="{% url 'users:register' %}" class="block py-2 px-4 text-sm hover:bg-gray-200">Signup</a>
+    <a href="{% url 'users:login' %}" class="block py-2 px-4 text-sm hover:bg-gray-200">Login</a>
     <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
-    <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
-    <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
+  {% endif %}
   </div>
 </nav>
