--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -3,7 +3,9 @@
 
 {% block content %}
 
-<div class="container mx-auto p-8 flex">
+{% include 'navbar.html' %}
+
+<div id="login" class="container mx-auto p-8 flex">
     <div class="max-w-md w-full mx-auto">
         <h1 class="text-4xl text-center mb-12 font-thin">Company</h1>
 
@@ -32,12 +34,14 @@
             </div>
 
             <div class="flex justify-between p-8 text-sm border-t border-gray-300 bg-gray-100">
-                <a href="#" class="font-medium text-indigo-500">Create account</a>
+                <a href="{% url 'users:register' %}" class="font-medium text-indigo-500">Create account</a>
 
                 <a href="#" class="text-gray-600">Forgot password?</a>
             </div>
         </div>
     </div>
 </div>
+
+{% include 'footer.html' %}
 
 {% endblock %}
