--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,9 +19,7 @@
         {% if user.is_authenticated %}
           <a href="{{ user.get_absolute_url }}" class="py-5 px-3 text-gray-700 hover:text-gray-900">Dashboard</a>
         {% else %}
-          <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
-          <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
-          <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
+
         {% endif %}
         </div>
       </div>
@@ -29,9 +27,9 @@
       <!-- secondary nav -->
       <div class="hidden md:flex items-center space-x-1">
       {% if user.is_authenticated %}
-        <a href="{% url 'users:logout' %}" class="py-5 px-3">Logout</a>
+        <a href="{% url 'users:logout' %}" class="py-2 px-3 bg-red-400 hover:bg-red-300 text-red-900 hover:text-red-800 rounded transition duration-300">Logout</a>
       {% else %}
-        <a href="{% url 'users:login' %}" class="py-5 px-3">Login</a>
+        <a href="{% url 'users:login' %}" class="py-2 px-3 bg-green-400 hover:bg-green-300 text-green-900 hover:text-green-800 rounded transition duration-300">Login</a>
         <a href="{% url 'users:register' %}" class="py-2 px-3 bg-yellow-400 hover:bg-yellow-300 text-yellow-900 hover:text-yellow-800 rounded transition duration-300">Signup</a>
       {% endif %}
       </div>
@@ -56,7 +54,6 @@
   {% else %}
     <a href="{% url 'users:register' %}" class="block py-2 px-4 text-sm hover:bg-gray-200">Signup</a>
     <a href="{% url 'users:login' %}" class="block py-2 px-4 text-sm hover:bg-gray-200">Login</a>
-    <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
   {% endif %}
   </div>
 </nav>
