--- a/templates/users/list_of_users_by_office.html
+++ b/templates/users/list_of_users_by_office.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
-{% block title %}List of user by office{% endblock title %}
-
 {% block content %}
 
 <div class="flex flex-col">
@@ -33,8 +31,7 @@
                             </th>
                         </tr>
                     </thead>
-                    {% for office in offices %}
-                    {% for user in office.user_set.all %}
+                    {% for user in queryset %}
                     <tbody class="bg-white divide-y divide-gray-200">
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap">
@@ -56,7 +53,7 @@
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap">
                                 <div class="text-sm text-gray-900">{{ user.title }}</div>
-                                <div class="text-sm text-gray-500"><a href="{{ office.get_absolute_url }}">{{ user.work_office }}</a></div>
+                                <div class="text-sm text-gray-500">{{ user.work_office }}</div>
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap">
                                 {% if user.is_active %}
@@ -80,7 +77,6 @@
                         </tr>
                         <!-- More people... -->
                     </tbody>
-                    {% endfor %}
                     {% endfor %}
                 </table>
             </div>
