--- a/templates/users/list_of_offices.html
+++ b/templates/users/list_of_offices.html
@@ -8,7 +8,7 @@
 
 <body class="flex bg-gray-100 min-h-screen">
     <aside class="hidden sm:flex sm:flex-col">
-        <a href="/"
+        <a href="#"
             class="inline-flex items-center justify-center h-20 w-20 bg-purple-600 hover:bg-purple-500 focus:bg-purple-500">
             <svg fill="none" viewBox="0 0 64 64" class="h-12 w-12">
                 <title>Company logo</title>
@@ -217,15 +217,15 @@
                     <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
                 </div>
                 <div class="flex flex-wrap items-start justify-end -mb-3">
-                    <button
+                    <a href={% url 'users:edit_user' pk=user.pk %}><button
                         class="inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                         </svg>
-                        Manage dashboard
-                    </button>
+                        Edit Profile
+                    </button></a>
                     <button
                         class="inline-flex px-5 py-3 text-white bg-purple-600 hover:bg-purple-700 focus:bg-purple-700 rounded-md ml-6 mb-3">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
