changed ratings system

--- a/templates/users/list_of_users_by_office.html
+++ b/templates/users/list_of_users_by_office.html
@@ -310,7 +310,7 @@
                                         </td>
                                         
                                         <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                            <a href="#" class="text-indigo-600 hover:text-indigo-900">Rate</a>
+                                            <a href="{% url 'users:rate_user' pk=user.pk %}" class="text-indigo-600 hover:text-indigo-900">Rate</a>
                                         </td>
                                     </tr>
                                     <!-- More people... -->
