--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -5,6 +5,32 @@
 
 {% include 'navbar.html' %}
 
+{% if user.is_authenticated %}
+
+<div id="logged-in" class="container mx-auto p-8 flex">
+    <section class="loged-in text-gray-600 body-font">
+        <div class="container px-5 py-24 mx-auto flex flex-wrap">
+            <h2 class="sm:text-3xl text-2xl text-gray-900 font-medium title-font mb-2 md:w-2/5">You are already logged
+                on to this server</h2>
+            <div class="md:w-3/5 md:pl-6">
+                <p class="leading-relaxed text-base">To proceed further use navigation or continue by...</p>
+                <div class="flex md:mt-4 mt-6">
+                    <a href="{% url 'home' %}" class="font-medium text-indigo-500">
+                        <button
+                            class="inline-flex text-white bg-indigo-500 border-0 py-1 px-4 focus:outline-none hover:bg-indigo-600 rounded">Continue</button></a>
+                    <a href="{{ user.get_absolute_url }}" class="text-indigo-500 inline-flex items-center ml-4">Profile
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                            <path d="M5 12h14M12 5l7 7-7 7"></path>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+{% else %}
 <div id="login" class="container mx-auto p-8 flex">
     <div class="max-w-md w-full mx-auto">
         <h1 class="text-4xl text-center mb-12 font-thin">Company</h1>
@@ -41,6 +67,7 @@
         </div>
     </div>
 </div>
+{% endif %}
 
 {% include 'footer.html' %}
 
